# atypes

./: .coverage  .gitignore  README.md  justfile  pyproject.toml
src/atypes/: __init__.py  enums.py  types.py  wrappers.py
src/type_cellar/: __init__.py  _types.py  converters.py  deduping.py  enums.py  exceptions.py  wrappers.py
src/type_cellar/adaptors/: http.py
src/type_cellar/converters/: __init__.py  _raise_util.py  annotated_types.py  attrs_converters.py  base_converter.py  datetimes.py  enums.py  exceptions.py  json_.py  recursive_attrs.py  sentinels.py  uuid_hooks.py
src/type_cellar/models/: etl.py
tests/: smoke_test.py
