[project]
name = "atypes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Socarras", email = "apsocarras@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.15.0",
    "useful-types>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
