[project]
name = "type-cellar"
version = "0.1.0"
description = "Common types I use across projects."
readme = "README.md"
authors = [
    { name = "Alexander Socarras", email = "apsocarras@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.4.0",
    "cattrs>=25.3.0",
    "nobeartype>=0.1.1",
    "typing-extensions>=4.15.0",
    "useful-types>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
test = [
    "beartype>=0.22.2",
    "pytest>=8.4.2",
]


[tool.mypy]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true

[tool.ruff.lint]
ignore=[
    # Don't name lambdas
    "E731", 
    ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.workspace]
members = ["foo"]
